<resources>
    <string name="app_name">Light Control</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_default_base_url">http://</string>
    <string name="pref_base_url">Tellprox base URL</string>
    <string name="pref_default_port">666</string>
    <string name="pref_base_port">Tellprox port</string>
    <string name="action_update_lights">Update switches</string>

</resources>
