<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:enabled="true">

    <PreferenceCategory
        android:title="@string/pref_header_general">

        <EditTextPreference
            android:key="base_url"
            android:defaultValue="@string/pref_default_base_url"
            android:selectAllOnFocus="true"
            android:title="@string/pref_base_url"
            android:inputType="textUri"
            android:maxLines="1"
            android:singleLine="true" />

        <EditTextPreference
            android:key="port"
            android:defaultValue="@string/pref_default_port"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:title="@string/pref_base_port"
            android:inputType="number" />

    </PreferenceCategory>

</PreferenceScreen>

